# mle-traning

./: .gitignore  README.md
Module 1/: README.md
Module 1/Part 1/: README.md  my_conda_session  my_git_session  my_unix_session
Module 1/Part 2/: README.md  nonstandardcode.py
Module 1/Part 3/: nonstandardcode.py
Module 1/Part 4/: env.yml
Module 2/: MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
Module 2/docs/source/: modules.rst
Module 2/scripts/: ingest_data.py  score.py  train.py
Module 2/tests/unit_tests/: test_data_ingestion.py
Module 3/: README.md
Module 3/mlruns/0/: meta.yaml
Module 3/mlruns/0/2b08016c6fb145bda6e137400381fa23/: meta.yaml
Module 3/mlruns/0/2b0a0695b44943769724b78c0b40e66c/: meta.yaml
Module 3/mlruns/0/3c4fd0bb837f44bfbe0761eb2d430b54/: meta.yaml
Module 3/mlruns/0/455e33d4d3b1435faa98bcc8d79fddbd/: meta.yaml
Module 3/mlruns/0/55293ae028f04ae6b8151b7e6ccd8166/: meta.yaml
Module 3/mlruns/0/570493b31ca5416a9fc52e24a555b254/: meta.yaml
Module 3/mlruns/0/58c765b9e2e34a01aca41a8216446876/: meta.yaml
Module 3/notebooks/: 02_end_to_end_machine_learning_project.ipynb  my_model.pkl
Module 3/src/housing_price_predictor/: score.py  train.py
Module 3/tests/functional_tests/: test_installation.py
Module 4/: .dockerignore  Dockerfile  MANIFEST.in  README.md  docker_log  main.py  my_docker_session  pyproject.toml  requirements.txt
Module 4/docs/source/: conf.py  index.rst
Module 4/model_pickles/: lin_reg.pkl  tree_reg.pkl
Module 4/scripts/: ingest_data.py  logger.py
(+229 files in other folders)
