[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "housing_price_predictor"
version = "v0.3"
authors = [
  { name="Subhadeep Paul", email="subhadeep.paul@tigeranalytics.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "matplotlib==3.8.4",
  "numpy==1.26.4",
  "pandas==2.2.2",
  "scikit-learn==1.4.2",
  "scipy==1.13.1",
  "six==1.16.0"
]
